--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     />
 
     <!-- 外部ファイルの読み込み -->
-    <!-- <script src="【ファイルのURL】"></script> -->
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
 
@@ -28,7 +27,7 @@
     <link rel="shortcut icon" href="./images/favicon.png" />
     <link rel="apple-touch-icon-precomposed" href="./images/favicon.png" />
 
-    <!-- facebookのOGP -->
+    <!-- OGP -->
     <meta
       property="og:url"
       content="https://example.com/index.html【ページのURL】 /"
@@ -41,44 +40,7 @@
     />
     <meta property="og:image" content="./images/main-bg.jpg" />
     <meta property="og:site_name" content="WCB Cafe" />
-    <!-- <meta property="fb:app_id" content="【appID】" /> -->
     <meta property="og:locale" content="ja_JP" />
-
-    <!-- TwitterのOGP -->
-    <!-- <meta name="twitter:card" content="【カードの種類】" />
-    <meta name="twitter:site" content="【@ユーザー名】" />
-    <meta name="twitter:description" content="【ページの説明】" />
-    <meta name="twitter:image:src" content="【サムネイル画像のURL】" /> -->
-
-    <!-- クローラーを制御する場合 -->
-    <!-- <meta name="robots" content="index,follow" /> -->
-
-    <!-- 以下は自分で書いたmetaタグ -->
-    <!-- 自動リンクの無効化 -->
-    <!-- <meta name="format-detection" content="email=no,telephone=no,address=no" /> -->
-
-    <!-- Windowsのピン留め画像/背景色 -->
-    <!-- <meta name="msapplication-TileImage" content="画像のURL" />
-    <meta name="msapplication-TileColor" content="背景色" /> -->
-
-    <!-- 著者名 -->
-    <!-- <meta name="author" content="著者名" /> -->
-
-    <!-- コピーライト -->
-    <!-- <meta name="copyright" content="©会社名" /> -->
-
-    <!-- 概要、主題、要約 -->
-    <!-- <meta name="summary" content="ページ概要" />
-    <meta name="subject" content="ページの主題" />
-    <meta name="abstract" content="ページの要約" /> -->
-    <!-- ここまで自分の書いたmetaタグ -->
-
-    <!-- URLを正規化する場合 -->
-    <!-- <link rel="canonical" href="【正規化するURL】" /> -->
-
-    <!-- 分割ページの場合 -->
-    <!-- <link rel="prev" href="【1つ前のページのURL】" />
-    <link rel="next" href="【1つ後ろのページのURL】" /> -->
   </head>
 
   <body>
