index.htmlにtwitterのOGPを追加

--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
     <link rel="apple-touch-icon-precomposed" href="./images/favicon.png" />
 
     <!-- OGP -->
-    <meta
-      property="og:url"
-      content="https://example.com/index.html【ページのURL】 /"
-    />
+    <meta property="og:url" content="https://example.com/index.html /" />
     <meta property="og:title" content="WCB Cafe" />
     <meta property="og:type" content="website" />
     <meta
@@ -41,6 +38,13 @@
     <meta property="og:image" content="./images/main-bg.jpg" />
     <meta property="og:site_name" content="WCB Cafe" />
     <meta property="og:locale" content="ja_JP" />
+
+    <!-- twitterのOGP -->
+    <meta
+      name="twitter:description"
+      content="ブレンドコーヒーとヘルシーなオーガニックフードを提供するカフェ"
+    />
+    <meta name="twitter:image:src" content="./images/main-bg.jpg" />
   </head>
 
   <body>
