--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
     <meta property="og:locale" content="ja_JP" />
 
     <!-- twitterのOGP -->
+    <meta name="twitter:card" content="summary" />
     <meta
       name="twitter:description"
       content="ブレンドコーヒーとヘルシーなオーガニックフードを提供するカフェ"
     />
-    <meta name="twitter:image:src" content="./images/main-bg.jpg" />
+    <meta name="twitter:image" content="./images/main-bg.jpg" />
   </head>
 
   <body>
