--- a/index.html
+++ b/index.html
@@ -28,14 +28,17 @@
     <link rel="apple-touch-icon-precomposed" href="./images/favicon.png" />
 
     <!-- OGP -->
-    <meta property="og:url" content="https://example.com/index.html /" />
+    <meta property="og:url" content="https://kurodatokeiten.moo.jp/wcbcafe/" />
     <meta property="og:title" content="WCB Cafe" />
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
       content="ブレンドコーヒーとヘルシーなオーガニックフードを提供するカフェ"
     />
-    <meta property="og:image" content="./images/main-bg.jpg" />
+    <meta
+      property="og:image"
+      content="https://kurodatokeiten.moo.jp/wcbcafe/images/main-bg.jpg"
+    />
     <meta property="og:site_name" content="WCB Cafe" />
     <meta property="og:locale" content="ja_JP" />
 
@@ -45,7 +48,10 @@
       name="twitter:description"
       content="ブレンドコーヒーとヘルシーなオーガニックフードを提供するカフェ"
     />
-    <meta name="twitter:image" content="./images/main-bg.jpg" />
+    <meta
+      name="twitter:image"
+      content="https://kurodatokeiten.moo.jp/wcbcafe/images/main-bg.jpg"
+    />
   </head>
 
   <body>
